--- a/project_1.ipynb
+++ b/project_1.ipynb
@@ -808,7 +808,10 @@
         "    layers.Dense(5, activation=\"relu\"),\n",
         "    layers.Dense(1)                    \n",
         "  ])\n",
-        "  model.compile"
+        "  model.compile(optimizer=\"rmsprop\", loss=\"mse\", metrics=[\"mae\"])\n",
+        "  return model;\n",
+        "\n",
+        "  regmodl3 = build_regmodl3()"
       ],
       "metadata": {
         "id": "FKRKSxhfAeWi"
