--- a/project_1.ipynb
+++ b/project_1.ipynb
@@ -744,6 +744,26 @@
       "outputs": []
     },
     {
+      "cell_type": "code",
+      "source": [
+        "from prettytable import PrettyTable\n",
+        "\n",
+        "predictions = regmodl3.predict(Xtst)\n",
+        "\n",
+        "table = PrettyTable(['Pattern #', 'f1', 'f2', 'f3', 'f4', 'f5', 'f6', 'f7', 'f8', 'f9', 'f10', 'f11', 'f12', 'Activation', 'Target', 'Error'])\n",
+        "\n",
+        "\n",
+        "for i in range(10):\n",
+        "  error = abs(predictions[i] - y_tst[i])\n",
+        "  table.add_row([i, Xtst[i][0], Xtst[i][1], Xtst[2], Xtst[3], Xtst[i][4], Xtst[i][5], Xtst[6], Xtst[7], Xtst[i][8], Xtst[i][9], Xtst[10], Xtst[11], predictions[i], y_tst[i], error])"
+      ],
+      "metadata": {
+        "id": "GmgGdwnGObc-"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "# Part 3: Classification Model\n"
